--- a/index.html
+++ b/index.html
@@ -103,13 +103,23 @@
     </article>
   </section>
   <section id="pricing">
-    <h2>Pricing Options</h2>
+    <div class="head-wrapper">
+      <h2>Pricing Options</h2>
+      <div class="badge-wrapper">
+        <div class="text-wrapper">
+          <h3>2:1 Guarantee</h3>
+          <p>My services will bring you back at least $2 in value for every $1 spent or your money back.</p>
+        </div>
+        <img src="./Images/2_1_guarantee.png" alt="Two to one guarantee - my services will bring you back at least $2 for every $1 spent or your money back.">
+      </div>
+    </div>
     <div id="package-1" class="package-container">
       <div class="package-header-container">
         <h3>Starting Strong</h3>
         <h4>Option #1</h4>
         <p class="reg-price-txt">Regular price <span class="reg-price-amount">$1,499.97</span></p>
         <p class="offer-price-txt">Starting at only <span class="offer-price-amount">$499.97</span>*</p>
+
       </div>
       <div class="package-description">
         <p>This web design package gets you a lightning-fast, fully-custom, one-page website that showcases your content.</p>
