--- a/index.html
+++ b/index.html
@@ -94,11 +94,40 @@
     </div>
   </section>
   <section id="about">
-    <article>
-      <img src="./Images/MikeOnMountain.jpg" alt="Mike from on top of Mount Monadnock" />
-      <h2 class="title"></h2>
-      <article class="my-story">
-        
+    <article class="my-story">
+      <div id="about-head-wrap" class="head-wrap">
+        <figure id="about-head-fig">          
+          <img src="./Images/MikeOnMountain.jpg" alt="Mike from on top of Mount Monadnock" />
+          <figcaption>Mike Lamondy<br/>Mount Monadnock - Jaffrey, NH</figcaption>
+        </figure>
+        <h2 id="about-title" class="title">Wouldn't it be great if the World Wide Web were SIMPLE?</h2>
+      </div>
+      <article id="hiking-story">
+        <p>That's me in that image taking a selfie on top of Mount Monadnock in Jaffrey, NH.  We started hiking that day thinking it would be a regular hike...but wouldn't it be great if everything were that simple? ...can you see a theme developing here...?</p>
+        <p>My family hikes this mountain regularly, okay.  The mountain is about a 2 hour drive for us, so we start out early in the morning; me, my 5 kids, and my wife, and sometimes others. We find a place to park, usually hit the bathrooms, grab our packs and then hike our way up to the top. </p>
+        <aside><strong>Mt. Monadnock</strong> peaks at about <strong>3150ft.</strong> above sea level. The hike is a little more than 2 miles one-way. The elevation gain from the trail head is about <strong>1800ft.</strong> And the view from the top is very impressive!</aside>
+        <p>Once we get to the peak and we've had time to take in the amazing view, we usually stop and enjoy an extended lunch break before hiking our way back down. The hike down always seems to take longer than we expect, so we're usually pretty tired once getting back to the trail head. As you can imagine, this is an all day affair for us. Nothing crazy, just ...long. But, the day I took that selfie was apparently no regular day.  </p>
+        <p>We started out with the understanding that the temperature was going to be pretty warm so we brought plenty of water and dressed for warm weather, but of course we were prepared for anything being on a mountain for the day.  About half-way up the mountain some wind rolled in that caused a sudden and tremendous drop in temperature.  In fact, it got so cold that most of us decided to stop and pull a sweatshirt from our packs to try and warm up a little.  After a while the trail led us back into some tree cover which was great because tree cover helped shield us from some of that nasty wind.  So here we are enjoying the tree cover, then the clouds rolled in and started to rain on us.  Rain in the warm weather isn't usually bad, but this day had turned really cold now because of the wind.</p>
+        <p>So, now here we all are wet and cold, hiking up the trail, in and out of tree cover.  Some of our crew whined and pleaded to turn back, but I was determined not to let a little weather get in the way.</p>
+        <hr/>
+        <p class="block-quote">See I believe in finishing what you start and I wasn't about to turn back just because of being uncomfortable.</p>
+        <hr/>
+        <p>I mean sure, I was cold, and I was wet, and that part wasn't very fun, but I just couldn't let the mountain get the best of me. Something in me just kept screaming, <span class="callout-text">"We don't give up, we overcome."</span> So we continued in spite of the conditions.</p>
+        <p><strong>I should probably tell you -</strong> About two days before this trip, I was working up on a roof and pulled my hip muscle pretty hard.  It was uncomfortable to walk and I probably should have cancelled the trip, but like I said, I'm not about letting circumstances get the best of me. Looking back, I definitely should have postponed the trip.  I was in no physical shape to be hiking a mountain and because I tried to ignore my physical shape, it ended up that I actually couldn't walk for a few days after the trip but that's another story for another time...</p>
+        <p><strong>Now, back to the trip...</strong> We obviously made it to the top as you can see from the picture.  The summit was soooo windy, which made it even more cold and very difficult to enjoy our picnic like we usually would.  Mostly everyone just wanted the day to be over, but not me.  I just had to take in the experience and get some footage of the amazing view!  I ate quickly so that I could go around and get some pics without holding everyone else up for too long.  The nagging pain in my hip and the sharp cold on my skin tried to distract me from taking in the beauty of that panoramic view, but for some reason, those challenges only reminded me, 'this is why we do this after all, isn't it?'</p>
+        <p><strong>Overcoming a mountain -</strong> Isn't it what we all aspire to?  It's like a metaphor for life, right?  I heard Jordan Peterson say it like this: <span class="inline-quote">"We're built to walk uphill. And when you reach the pinnacle of the hill, you want to stop and appreciate the vision, but the next thing you want is a higher hill in the distance ... <strong>It's from the uphill climb that we derive our value."</strong></span>  It was odd to me that the majority of the group I was with only wanted to whine and complain about the cold damp wind and the ruined picnic, but I wasn't going to deprive myself this fulfillment.  I mean sure, we could all look at the beautiful site from the ground without experiencing any setbacks or tribulations, and that would be great, but the personal satisfaction I get from hiking up a mountain is ...indescribable.  Up there... on the mountain... once I've done the work of the hike... and I get to the summit... the rest of life just seems so... simple!</p>
+      </article>
+      <hr>
+      <article id="learning-webstuff">
+        <p><strong>So to bring this back to my point...</strong></p>
+        <p>Our trip up <em>(and down)</em> the mountain that day was anything but simple.  But the intrapersonal victory I experienced while being at the summit, that was simple.  The reality is that life is rarely simple and the world wide web is anything but simple, but as the key person in your organization, I know that your involvement with the web needs to be simple.  Afterall, you've got plenty of other mountains to climb <em>(I couldn't resist the pun)</em>.  That's actually what got me started in web development.</p>
+        <p>You see, I was an entrepreneur just like you.  And like you, I needed some help with all the world wide web stuff.  I had heard that a website could help me get more customers and increase my chances of success in business.  I didn't know anything about how to build a webpage, but I had heard whispers of just how simple it could be to establish my online presence, so I got started.</p>
+        <p>I learned how to use webpage builders and tried to DIY my way in which was okay for a while, but I wasn't satisfied with the results because every webpage builder I used had it's limitations.  What I soon learned about web page builders is that they just don't cooperate well with good marketing practices.  Sure, you can build a webpage that looks nice, but you have to ask yourself; <em>'does it convert my hard-earned marketing investment into profit?'</em></p>
+        <p><strong>Then I attempted to hire some help and get a website created for me.</strong>  Trying to find a web designer worth hiring was ...difficult, to say the least and it certainly wasn't simple!  In addition to hiring website help, I tried hiring people to help me with marketing and SEO, but everyone I recruited to help me seemed to come up short.  <span class="larger-text">It always seemed like I got very similar results whether I hired a freelancer for $500 or hired a so-called professional web design company for $5,000.  It was like they just grabbed a template and filled it in with some semi-custom but mostly generic statements that vaguely resembled my business with no care of whether this investment was bringing me a good return.</span></p>
+        <p>Over the years I've dealt with all kinds of "website people" who claimed to know what they were doing.  All of which were happy to continue taking my money while providing me no new business.  Sure, having a website is great, but the whole idea of having a webpage is to make more money or get more customers, right?  So, that's where I was; probably where you are right now, sold on the idea of having an online presence but also not satisfied with the quality of so-called web designers out there.  What did I do about it?  I studied.</p>
+        <p>I was determined to figure out what I was missing.  I spent years researching marketing, and sales, and SEO, and web design.  My studies (and some life circumstances that I won't go into detail about now) eventually led me to learn web development which kind of gave me a space to put it all together.  I guess I felt like, <span class="inline-quote">"If I can't find someone who can actually help me, I'll just learn how to actually do it myself."</span></p>
+        <p>And so, the webpage you're looking at right now is sort of a testament of what it took me many <em>many</em> hours to learn over the course of more than two decades.  And you're seeing this right now because it also occurs to me that I'm not alone.  I discovered there are many people just like you who need a source for real help; not another freelancer who knows how to copy and paste, not another so-called professional web design company that is just going to charge you a boatload more for pretty much the same results.  No, I know that you need real help, real help that produces real results.  That's what I'm about.  Real results.  It's that simple!</p>
+        <p class="attention-grabber"><strong>What do I mean by real results? -</strong> As an entrepreneur myself who has more than 20 years in the trenches, I know that your marketing efforts need to bring you at least $2 for every dollar spent on them, and that includes your website.  That's why I back all my services with <span class="guarantee">my 2:1 guarantee: any service you hire me for will bring you $2 for every dollar spent or your money back.</span>  I can help you with as much or as little as you need, but the results will always be measured in ROI.  So, are you ready to experience my simple approach?  Contact me today to claim your special offer.</p>
       </article>
     </article>
   </section>
@@ -253,7 +282,7 @@
   <section id="contact">
     <div class="text-wrapper">
       <h2>Let's work together!</h2>
-      <p>Contact me today.</p>
+      <p>Contact me today to get started</p>
     </div>
     <img class="hero-img" src="./Images/MikeHero.png" alt="Owner, Mike Lamondy"/>
     <div class="link-wrapper">
