changed logo filename

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <img id="logo" src="./Images/_Web_Dev.ML Logo.png" alt="logo image">
+    <img id="logo" src="./Images/webDev.ML_Logo.png" alt="logo image">
     <a href="tel:5085587844" id="phone-link">(508) 558-7844</a>
     <nav id="nav">
       <ul>
