--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Website design - I build fully custom, lightning-fast websites sure to get you noticed online!">
-  <title>Lighting-Fast websites</title>
+  <title>Lighting-Fast Websites</title>
   <link rel="stylesheet" href="main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <img id="logo" src="./Images/webDev.ML_Logo.png" alt="WebDev.ML logo">
+    <img id="logo" src="./Images/webDev.ML_Logo.png" alt="WebDev.ML logo" class="animate spin-Y delay-3">
     <a href="tel:5085587844" id="phone-link">(508) 558-7844</a>
     <nav id="nav">
       <ul>
@@ -34,8 +34,8 @@
     </nav>
   </header>
   <section id="welcome">
-      <h1>Professional Web Design Services</h1>
-      <p class="subheading">Designs that turn your story into loyal clients</p>
+      <h1 class="animate fly-in-right delay-1">Professional Web Design Services</h1>
+      <p class="subheading animate fade-in delay-2">Designs that turn your story into loyal clients</p>
       <!-- <a href="#quick-start"><button type="button">Get Started</button></a> -->
   </section>
   <!-- <section id="new-client-cta">
@@ -68,7 +68,7 @@
   <section id="why-us">
     <h2>What Makes Us Different?</h2>
     <div id="key-point-1" class="wrapper">
-      <img src="Images/speed.png" alt="A timer showing lightning-fast speed">
+      <img src="Images/speed.png" alt="A timer showing lightning-fast speed" loading="lazy">
       <div class="text-wrap">
         <h3>Our sites are lightning-fast, yet functional</h3>
         <p><strong>Do you know just how short the average attention span is today?</strong> - I'll make sure your website loads fast so that even the shortest attention span won't leave while waiting for your site to load</p>
@@ -80,10 +80,10 @@
         <h3>Our designs are simple yet thorough</h3>
         <p><strong>What is the main goal of your website?</strong> - If you need more leads, then we'll focus the design on that purpose. I don't need an award for the best animations even though we may use animations in your web design. <span class="attention-grabber">You need more customers.</span> My website design will help you capture them!</p>
       </div>
-      <img src="Images/lightbulb-on.gif" alt="Zooming in on a hanging lightbulb off, then turning on">
+      <img src="Images/lightbulb-on.gif" alt="Zooming in on a hanging lightbulb off, then turning on" loading="lazy">
     </div>
     <div id="key-point-3" class="wrapper">
-      <img src="Images/optimization.png" alt="Search engine optimization">
+      <img src="Images/optimization.png" alt="Search engine optimization" loading="lazy">
       <div class="text-wrap">
         <h3>Our designs are optimized</h3>
         <p><strong>Do you know how Google ranks websites?</strong> - You need to show up at the top of the list, but that's not going to happen unless your site is optimized for accessibility <em>and</em> for various devices.  My web design services guarantee your site will check every box on Google's checklist and get you ranking high for the keywords that matter to you.</p>
@@ -280,7 +280,7 @@
   </section>
   <section id="contact">
     <div class="text-wrapper">
-      <h2>Let's work together!</h2>
+      <h2>Let's Grow Your Business Together</h2>
       <p>Contact me today to get started</p>
     </div>
     <img class="hero-img" src="./Images/MikeHero.png" alt="Owner, Mike Lamondy"/>
@@ -289,11 +289,6 @@
         <a href="mailto:bizmickml@gmail.com"><img src="./Images/mail_37dp_12130F_FILL1_wght700_GRAD0_opsz40.png" alt="email icon"> <span>E-mail</span></a>
         <a href="tel:5085587844"><img src="./Images/call_37dp_12130F_FILL1_wght700_GRAD0_opsz40.png" alt="phone receiver icon"> <span>Phone</span></a>
       </div>
-      <!-- <div id="social-link-container">
-        <a href="https://www.github.com/bizmickml" target="_blank"><img src="Images/github-mark-white.png" alt="github logo"><img src="Images/GitHub_Logo_White.png" alt="github logo"></a>
-        <a href="https://www.linkedin.com/in/mlamondy" target="_blank"><img src="Images/LI-Logo.png" alt="linked-in logo"></a>
-        <a href="https://www.freecodecamp.org/M_Lamondy" target="_blank"><img src="Images/fcc_primary_large.png" alt="freeCodeCamp.com logo"></a>
-      </div> -->
     </div>
   </section>
   <footer>
