--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav id="nav">
       <ul>
         <li><a href="#why-us">Why us?</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="#about-us">About</a></li>
         <li><a href="#pricing">Pricing</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -27,7 +27,7 @@
       <ul>
         <li>X</li>
         <li><a href="#why-us">Why us?</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="#about-us">About</a></li>
         <li><a href="#pricing">Pricing</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -90,7 +90,7 @@
       </div>
     </div>
   </section>
-  <section id="about">
+  <section id="about-us">
     <article class="my-story">
       <div id="about-head-wrap" class="head-wrap">
         <figure id="about-head-fig">          
