--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Website design - I build fully custom, lightning-fast websites sure to get you noticed online!">
-  <title>Lighting-Fast websites</title>
-  <link rel="stylesheet" href="main.css">
+  <meta name="description" content="Website design - I build fully custom websites that consistently convert your story into loyal customers!">
+  <title>Websites That Produce Results</title>
+  <link rel="stylesheet" href="./main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&family=Andika:ital,wght@0,400;0,700;1,400;1,700&family=Audiowide&family=Montserrat&family=Permanent+Marker&family=Special+Elite&display=swap" rel="stylesheet">
