--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <img id="logo" src="./Images/webDev.ML_Logo.png" alt="WebDev.ML logo" class="animate spin-Y delay-3">
+    <img id="logo" src="./Images/webDev.ML_Logo.png" alt="WebDev.ML logo" class="animate rotate-Y delay-3 count-infinite length-6000">
     <a href="tel:5085587844" id="phone-link">(508) 558-7844</a>
     <nav id="nav">
       <ul>
@@ -34,8 +34,8 @@
     </nav>
   </header>
   <section id="welcome">
-      <h1 class="animate fly-in-right delay-1">Professional Web Design Services</h1>
-      <p class="subheading animate fade-in delay-2">Designs that turn your story into loyal clients</p>
+      <h1 class="animate fly-in-right length-1000 delay-1">Professional Web Design Services</h1>
+      <p class="subheading animate fade-in length-1000 delay-2">Designs that turn your story into loyal clients</p>
       <!-- <a href="#quick-start"><button type="button">Get Started</button></a> -->
   </section>
   <!-- <section id="new-client-cta">
@@ -67,7 +67,7 @@
   </section> -->
   <section id="why-us">
     <h2>What Makes Us Different?</h2>
-    <div id="key-point-1" class="wrapper">
+    <div id="key-point-1" class="wrapper fly-in-right length-1000">
       <img src="Images/speed.png" alt="A timer showing lightning-fast speed" loading="lazy">
       <div class="text-wrap">
         <h3>Our sites are lightning-fast, yet functional</h3>
@@ -75,14 +75,14 @@
         <p><strong>How much time would you spend <em>"figuring out"</em> how to use a website?</strong> - Because I'm a web developer with a methodical process, I'll make sure your online space presents in a way that makes sense to your people <em>and</em> keeps them engaged long enough to take action!</p>
       </div>
     </div>
-    <div id="key-point-2" class="wrapper">
+    <div id="key-point-2" class="wrapper fly-in-left length-1000">
       <div class="text-wrap right-align">
         <h3>Our designs are simple yet thorough</h3>
         <p><strong>What is the main goal of your website?</strong> - If you need more leads, then we'll focus the design on that purpose. I don't need an award for the best animations even though we may use animations in your web design. <span class="attention-grabber">You need more customers.</span> My website design will help you capture them!</p>
       </div>
       <img src="Images/lightbulb-on.gif" alt="Zooming in on a hanging lightbulb off, then turning on" loading="lazy">
     </div>
-    <div id="key-point-3" class="wrapper">
+    <div id="key-point-3" class="wrapper fly-in-right length-1000">
       <img src="Images/optimization.png" alt="Search engine optimization" loading="lazy">
       <div class="text-wrap">
         <h3>Our designs are optimized</h3>
@@ -95,7 +95,7 @@
       <div id="about-head-wrap" class="head-wrap">
         <figure id="about-head-fig">          
           <img src="./Images/MikeOnMountain.jpg" alt="Mike from on top of Mount Monadnock" />
-          <figcaption>Mike Lamondy<br/>Mount Monadnock - Jaffrey, NH</figcaption>
+          <figcaption>Mike Lamondy<br/>Mount Monadnock (summit) - Jaffrey, NH</figcaption>
         </figure>
         <h2 id="about-title" class="title">Wouldn't it be great if the World Wide Web were SIMPLE?</h2>
       </div>
@@ -141,7 +141,7 @@
         <img src="./Images/2_1_guarantee.png" alt="Two to one guarantee - my services will bring you back at least $2 for every $1 spent or your money back.">
       </div>
     </div>
-    <div id="package-1" class="package-container">
+    <div id="package-1" class="package-container hover spin-Y length-500">
       <div class="package-header-container">
         <h3>Starting Strong</h3>
         <h4>Option #1</h4>
@@ -168,7 +168,7 @@
         </ul>
       </div>
     </div>
-    <div id="package-2" class="package-container">
+    <div id="package-2" class="package-container hover spin-Y length-500">
       <div class="package-header-container">
         <h3>E-commerce Integration</h3>
         <h4>Option #2</h4>
@@ -198,7 +198,7 @@
         </ul>
       </div>
     </div>
-    <div id="monthly-package" class="package-container">
+    <div id="monthly-package" class="package-container hover spin-Y length-500">
       <div class="special">
         <ul>
           <li>FREE Website</li>
