added cta on welcome section

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&family=Andika:ital,wght@0,400;0,700;1,400;1,700&family=Audiowide&family=Montserrat&family=Permanent+Marker&family=Special+Elite&display=swap" rel="stylesheet">
     <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17332276422">
-  </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17332276422"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -46,6 +45,10 @@
   <section id="welcome">
       <h1 class="animate fly-in-right length-1000 delay-1">Professional Web Design Services</h1>
       <p class="subheading animate fade-in length-1000 delay-2">Designs that turn your story into loyal clients</p>
+      <div id="cta-welcome">
+        <p>Call Now to claim your FREE, no-obligation consultation</p>
+        <a href="tel:5085587844"><p>(508) 558-7844</p></a>
+      </div>
       <!-- <a href="#quick-start"><button type="button">Get Started</button></a> -->
   </section>
   <!-- <section id="new-client-cta">
@@ -177,6 +180,7 @@
           <li>Contact section with contact form for lead generation</li>
         </ul>
       </div>
+      <div class="package-cta"><div></div> Call now to order <div></div></div>
     </div>
     <div id="package-2" class="package-container hover spin-Y length-500">
       <div class="package-header-container">
@@ -296,7 +300,7 @@
     <img class="hero-img" src="./Images/MikeHero.png" alt="Owner, Mike Lamondy"/>
     <div class="link-wrapper">
       <div id="contact-link-container">
-        <a href="mailto:bizmickml@gmail.com"><img src="./Images/mail_37dp_12130F_FILL1_wght700_GRAD0_opsz40.png" alt="email icon"> <span>E-mail</span></a>
+        <a href="mailto:M_LAMONDY@website-roi.com"><img src="./Images/mail_37dp_12130F_FILL1_wght700_GRAD0_opsz40.png" alt="email icon"> <span>E-mail</span></a>
         <a href="tel:5085587844"><img src="./Images/call_37dp_12130F_FILL1_wght700_GRAD0_opsz40.png" alt="phone receiver icon"> <span>Phone</span></a>
       </div>
     </div>
